backends/x11/standalone: add a nullptr check in the vblank handler

It can be called without a previous presentation in some cases

BUG: 488112